static/v2/css/style.css
/* ... */
img{
  max-width: 100%;
}

button{
  cursor: pointer;
  border: none;
}

a{
  text-decoration: none;
  color: #0075C9;
  cursor: pointer;
  font-weight: 500;
  opacity: .8;
}

a:hover{
  opacity: 1;
}

main{
  max-width: 1000px;
  margin: 0 auto;
  padding: 0 20px;
}

._flex-space{
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

._banner-bg{
  background-image: url(../img/background-pattern.png);
  background-size: cover;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

._visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

._visuallyhidden:active,
._visuallyhidden:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/******************************************************
  site header
******************************************************/

.site-header{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 6px;
  background: #fff;
}

.site-header > .hamburger{
  display: none;
  background-color: transparent;
  width: 24px;
  height: 40px;
  background-position: center;
  margin-left: 10px;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAKklEQVR4Ae3TMRUAAAhCQfuX1g4+BoY7AjD9qQOwmb0OHICSlQxCUzLAAUfPrmAyBxxOAAAAAElFTkSuQmCC);
  background-size: 100%;
  background-repeat: no-repeat;
}

.site-nav{
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center

}

.site-nav{
  margin: 0 10px;
  font-size: 14px;
  text-transform: capitalize;
  vertical-align: middle;
  padding: 12px 10px;
}

.nav-header{
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 40px
}

.nav-header > .logo.-hidden{
  display: none;
}

.nav-header > .logo img{
  height: 30px;
  margin-left: 16px;
  vertical-align: middle;
}

.nav-header > .close{
  display: none;
}

.sub-wrap{
  position: relative
}

.sub-wrap > .button{
  padding: 8px 10px;
  margin-left: 10px;
  font-size: 14px;
  text-transform: capitalize;
  vertical-align: middle;
  font-weight: 500;
  color: inherit;
  background-color: transparent;
}

.sub-wrap > .button:after{
  content: '';
  background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='24px' height='24px' viewBox='0 0 24 24' fill='%23757575'%3E %3Cpath d='M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z'/%3E %3Cpath d='M0-.75h24v24H0z' fill='none'/%3E %3C/svg%3E ");
  display: inline-block;
  width: 24px;
  height: 24px;
  vertical-align: middle;
}

.sub-nav{
  display: none;
  position: absolute;
  text-align: left;
  background: #fff;
  border: 1px solid #ddd;
  min-width: 200px;
  padding: 8px 12px;
  border-radius: 3px;
  top: 40px;
  cursor: auto;
  cursor: initial;
  font-size: 14px

  /* using 2 pesudo element to create a bordered triangle */
}

.sub-nav:before{
  content: '';
  position: absolute;
  top: -10px;
  width: 2px;
  height: 0;
  border-width: 0 10px 10px;
  border-style: solid;
  border-color: transparent transparent #ddd;
}

.sub-nav:after{
  content: '';
  position: absolute;
  top: -8px;
  width: 2px;
  height: 0;
  border-width: 0 10px 10px;
  border-style: solid;
  border-color: transparent transparent #fff;
}

.sub-nav > .link,
  .sub-nav > .command{
  display: block;
}

.sub-nav > .link{
  color: #000;
  padding: 3px 0;
  font-weight: 400;
  text-transform: none;
}

.sub-nav > .link:hover{
  color: #0075C9;
}

.sub-nav .command{
  display: inline-block;
  color: #000;
  text-transform: none;
  background: #f5f5f5;
  border: 1px solid #ddd;
  padding: 0 6px;
  margin: 3px 0;
  color: #de0e32;
}

.sub-nav > .title{
  color: #999;
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 600;
  margin: 4px 0;
}

/* open sub nav */

.sub-wrap:hover .sub-nav{
  display: block;
}

.command-list{
  margin: 0;
  padding: 0;
  list-style: none;
}
/* ... */

